--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -1,6 +1,13 @@
 hostname POP${POP}-CUST${CUSTOMER}
+ip domain-name workshop.menog.net
 !
 enable secret ipv6
+!
+aaa new-model
+username lab secret ipv6
+aaa authentication login default local
+!
+ip ssh version 2
 !
 no ip domain-lookup
 no ip http server
@@ -17,7 +24,7 @@ ip classless
 no ip source-route
 --END--
 !
---ONLY v6--
+--ONLY v6|6rd--
 ipv6 unicast-routing
 ipv6 cef
 no ipv6 source-route
@@ -35,13 +42,22 @@ clock timezone UTC 0
 !
 interface loopback 0
  description "POP ${POP} Customer ${CUSTOMER} Loopback"
- --ONLY v4--
- ip address 172.2${POP}.${CUSTOMER}.1 255.255.255.255
- --END--
- --ONLY v6--
- ipv6 address 2001:db8:${POP}00${CUSTOMER}::1/128
- --END--
+ ip address 172.2${POP}.${CUSTOMER}.1 255.255.255.255	! ONLY v4
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}::1/128	! ONLY v6
+ ipv6 address DELEGATED_PREFIX ::1/128			! ONLY 6rd
  no shutdown
+!
+--ONLY 6rd--
+ipv6 general-prefix DELEGATED_PREFIX 6rd Tunnel6
+!
+interface Tunnel6
+ tunnel source f0/0
+ tunnel mode ipv6ip 6rd
+ tunnel 6rd ipv4 prefix-len 12
+ tunnel 6rd prefix 2001:db8:d000::/36
+ tunnel 6rd br 172.16.${POP}.2
+ ipv6 address DELEGATED_PREFIX ::/128 anycast
+--END--
 !
 interface f0/0
  description "Link to POP${POP}-R1"			! ONLY CUST1
@@ -71,7 +87,13 @@ interface f0/1
  no ip proxy-arp
  --END--
  --ONLY v6--
- ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::b/127
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::1/64
+ ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::/64 anycast
+ no ipv6 redirects
+ --END--
+ --ONLY 6rd--
+ ipv6 address DELEGATED_PREFIX 0:0:0:1::1/64
+ ipv6 address DELEGATED_PREFIX 0:0:0:1::/64 anycast
  no ipv6 redirects
  --END--
  no shutdown
@@ -109,7 +131,7 @@ ip prefix-list MYSELF-IPv4 permit 172.2${POP}.2.0/24
 --END--
 !
 --ONLY CUST2-v6--
-ipv6 prefix-list MYSELF-IPv6 permit 2001:db8:${POP}002::/4
+ipv6 prefix-list MYSELF-IPv6 permit 2001:db8:${POP}002::/48
 --END--
 !
 --ONLY v4--
@@ -120,10 +142,27 @@ ip route 0.0.0.0 0.0.0.0 172.16.2${POP}.1		! ONLY CUST1
 ipv6 route 2001:db8:${POP}00${CUSTOMER}::/48 Null 0
 ipv6 route ::/0 2001:db8:${POP}:ff01::a			! ONLY CUST1
 --END--
+--ONLY 6rd--
+ipv6 route ::/0 Tunnel6
+--END--
+!
+--ONLY v4--
+ip access-list extended MANAGEMENT-IPv4
+ permit ip 172.16.0.0 0.0.255.255 any
+--END--
+--ONLY v6|R2-6rd--
+ipv6 access-list MANAGEMENT-IPv6
+ permit ipv6 2001:db8::/48 any
+--END--
 !
 line console 0
- password ipv6
- login
+ login authentication default
  logging synchronous
  transport preferred none
+!
+line vty 0 4
+ login authentication default
+ transport input ssh
+ access-class MANAGEMENT-IPv4 in			! ONLY v4
+ ipv6 access-class MANAGEMENT-IPv6 in			! ONLY v6|R2-6rd
 !
