--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -1,6 +1,13 @@
 hostname POP${POP}-R${ROUTER}
+ip domain-name workshop.menog.net
 !
 enable secret ipv6
+!
+aaa new-model
+username lab secret ipv6
+aaa authentication login default local
+!
+ip ssh version 2
 !
 no ip domain-lookup
 no ip http server
@@ -17,7 +24,7 @@ ip classless
 no ip source-route
 --END--
 !
---ONLY v6--
+--ONLY v6|R2-6rd--
 ipv6 unicast-routing
 ipv6 cef
 no ipv6 source-route
@@ -39,11 +46,20 @@ interface loopback 0
  ip address 172.16.${POP}.${ROUTER} 255.255.255.255
  ip ospf 1 area ${POP}.0.0.0
  --END--
- --ONLY v6--
+ --ONLY v6|R2-6rd--
  ipv6 address 2001:db8::${POP}:${ROUTER}/128
  ipv6 ospf 1 area ${POP}.0.0.0
  --END--
  no shutdown
+!
+--ONLY R2-6rd--
+interface Tunnel6
+ tunnel source Loopback0
+ tunnel mode ipv6ip 6rd
+ tunnel 6rd ipv4 prefix-len 12
+ tunnel 6rd prefix 2001:db8:d000::/36
+ ipv6 address 2001:db8:d00${POP}:02::/128 anycast
+--END--
 !
 interface f0/0
  duplex full
@@ -112,14 +128,14 @@ interface e1/0
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
  ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6
- ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v4
+ ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6
  --END--
  --ONLY R2--
  description "Link to core switch SW1"
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
  ip ospf 1 area 0.0.0.0								! ONLY v4
- ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6
- ipv6 ospf 1 area 0.0.0.0							! ONLY v6
+ ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6|6rd
+ ipv6 ospf 1 area 0.0.0.0							! ONLY v6|6rd
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
@@ -133,7 +149,7 @@ interface e1/0
  no ip directed-broadcast
  no ip proxy-arp
  --END--
- --ONLY v6--
+ --ONLY v6|R2-6rd--
  no ipv6 redirects
  ipv6 nd ra suppress all
  --END--
@@ -149,7 +165,7 @@ interface e1/1
  no ip directed-broadcast
  no ip proxy-arp
  --END--
- --ONLY R2-v6--
+ --ONLY R2-v6|R2-6rd--
  ipv6 address 2001:db8:0:2::${POP}/64
  ipv6 ospf 1 area 0.0.0.0
  no ipv6 redirects
@@ -167,7 +183,7 @@ interface e1/2
  shutdown
  --ONLY R2--
  ip address 192.168.1.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6
+ ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6|6rd
  no shutdown
  --END--
 !
@@ -181,7 +197,7 @@ interface e1/3
  shutdown
  --ONLY R2--
  ip address 192.168.2.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6
+ ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6|6rd
  no shutdown
  --END--
 !
@@ -205,7 +221,7 @@ router ospf 1
  no passive-interface e1/1
 --END--
 !
---ONLY v6--
+--ONLY v6|R2-6rd--
 ipv6 router ospf 1
  timers throttle spf 200 2000 90000
  timers throttle lsa 200 10000 45000
@@ -217,7 +233,7 @@ ipv6 router ospf 1
  no passive-interface f0/0
  no passive-interface f0/1
 --END--
---ONLY R2-v6--
+--ONLY R2-v6|R2-6rd--
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -292,13 +308,13 @@ router bgp 65530
   neighbor 172.16.2${POP}.6 activate
  --END--
  !
- --ONLY v6--
+ --ONLY v6|R2-6rd--
  address-family ipv6
   no synchronization
   redistribute static
-  neighbor POP${POP}-iBGP-IPv6 peer-group
-  neighbor POP${POP}-iBGP-IPv6 remote-as 65530
-  neighbor POP${POP}-iBGP-IPv6 update-source Loopback0
+  neighbor POP${POP}-iBGP-IPv6 peer-group					! ONLY v6
+  neighbor POP${POP}-iBGP-IPv6 remote-as 65530				! ONLY v6
+  neighbor POP${POP}-iBGP-IPv6 update-source Loopback0		! ONLY v6
  --END--
  --ONLY R1-v6--
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
@@ -311,8 +327,10 @@ router bgp 65530
   neighbor 2001:db8::${POP}:1 activate
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:3 activate
-  network 2001:db8::/32
   neighbor POP${POP}-iBGP-IPv6 route-reflector-client
+ --END--
+ --ONLY R2-v6|R2-6rd--
+  network 2001:db8::/32
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 remote-as 65530
   neighbor Core-iBGP-IPv6 update-source Loopback0
@@ -356,7 +374,7 @@ router bgp 65530
 --ONLY R2-v4--
 ip prefix-list TRANSIT-OUT-IPv4 permit 172.16.0.0/12
 --END--
---ONLY R2-v6--
+--ONLY R2-v6|R2-6rd--
 ipv6 prefix-list TRANSIT-OUT-IPv6 permit 2001:db8::/32
 --END--
 --ONLY R3-v4--
@@ -368,14 +386,30 @@ ipv6 prefix-list POP${POP}-CUST2-IN-IPv6 permit 2001:db8:${POP}002::/48
 ipv6 prefix-list POP${POP}-CUST2-OUT-IPv6 permit ::/0 le 48
 --END--
 !
+--ONLY v4--
+ip access-list extended MANAGEMENT-IPv4
+ permit ip 172.16.0.0 0.0.255.255 any
+--END--
+--ONLY v6|R2-6rd--
+ipv6 access-list MANAGEMENT-IPv6
+ permit ipv6 2001:db8::/48 any
+--END--
+!
 ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
 ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::b	! ONLY R1-v6
 ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
-ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6
+ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd
+ipv6 route 2001:db8:d00${POP}:02::/56 Null 0				! ONLY R2-6rd
+ipv6 route 2001:db8:d000::/36 Tunnel 6						! ONLY R2-6rd
 !
 line console 0
- password ipv6
- login
+ login authentication default
  logging synchronous
  transport preferred none
+!
+line vty 0 4
+ login authentication default
+ transport input ssh
+ access-class MANAGEMENT-IPv4 in							! ONLY v4
+ ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd
 !
