--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -313,6 +313,7 @@ router bgp 65530
   no synchronization
   redistribute static
   neighbor POP${POP}-iBGP-IPv6 peer-group					! ONLY v6
+  neighbor POP${POP}-iBGP-IPv6 next-hop-self				! ONLY v6
   neighbor POP${POP}-iBGP-IPv6 remote-as 65530				! ONLY v6
   neighbor POP${POP}-iBGP-IPv6 update-source Loopback0		! ONLY v6
  --END--
@@ -332,6 +333,7 @@ router bgp 65530
  --ONLY R2-v6|R2-6rd--
   network 2001:db8::/32
   neighbor Core-iBGP-IPv6 peer-group
+  neighbor Core-iBGP-IPv6 next-hop-self
   neighbor Core-iBGP-IPv6 remote-as 65530
   neighbor Core-iBGP-IPv6 update-source Loopback0
   neighbor 2001:db9:ffff:100${POP}::a remote-as 65531
