--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -83,11 +83,13 @@ interface f0/0
  no ip directed-broadcast
  no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
+ ip ospf network point-to-point
  --END--
  --ONLY v6--
  no ipv6 redirects
  ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
+ ipv6 ospf network point-to-point
  --END--
  no shutdown
 !
@@ -113,11 +115,13 @@ interface f0/1
  no ip directed-broadcast
  no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
+ ip ospf network point-to-point
  --END--
  --ONLY v6--
  no ipv6 redirects
  ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
+ ipv6 ospf network point-to-point
  --END--
  no shutdown
 !
