--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -53,9 +53,9 @@ ipv6 general-prefix DELEGATED_PREFIX 6rd Tunnel6
 interface Tunnel6
  tunnel source f0/0
  tunnel mode ipv6ip 6rd
- tunnel 6rd ipv4 prefix-len 12
- tunnel 6rd prefix 2001:db8:d000::/36
- tunnel 6rd br 172.16.${POP}.2
+ tunnel 6rd ipv4 prefix-len 24
+ tunnel 6rd prefix 2001:db8:d${POP}00::/40
+ tunnel 6rd br 172.16.2${POP}.255
  ipv6 address DELEGATED_PREFIX ::/128 anycast
 --END--
 !
