--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -53,12 +53,17 @@ interface loopback 0
  no shutdown
 !
 --ONLY R2-6rd--
+interface Loopback6
+ ip address 172.16.2${POP}.255 255.255.255.255
+ ip ospf 1 area ${POP}.0.0.0
+ no shutdown
+!
 interface Tunnel6
- tunnel source Loopback0
+ tunnel source Loopback6
  tunnel mode ipv6ip 6rd
- tunnel 6rd ipv4 prefix-len 12
- tunnel 6rd prefix 2001:db8:d000::/36
- ipv6 address 2001:db8:d00${POP}:02::/128 anycast
+ tunnel 6rd ipv4 prefix-len 24
+ tunnel 6rd prefix 2001:db8:d${POP}00::/40
+ ipv6 address 2001:db8:d${POP}ff::/128 anycast
 --END--
 !
 interface f0/0
@@ -397,8 +402,8 @@ ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
 ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::b	! ONLY R1-v6
 ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
 ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd
-ipv6 route 2001:db8:d00${POP}:02::/56 Null 0				! ONLY R2-6rd
-ipv6 route 2001:db8:d000::/36 Tunnel 6						! ONLY R2-6rd
+ipv6 route 2001:db8:d${POP}ff::/48 Null 0					! ONLY R2-6rd
+ipv6 route 2001:db8:d${POP}00::/40 Tunnel6					! ONLY R2-6rd
 !
 line console 0
  login authentication default
