Add pre-6rd target

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -24,7 +24,7 @@ ip classless
 no ip source-route
 --END--
 !
---ONLY v6|R2-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd--
 ipv6 unicast-routing
 ipv6 cef
 no ipv6 source-route
@@ -46,7 +46,7 @@ interface loopback 0
  ip address 172.16.${POP}.${ROUTER} 255.255.255.255
  ip ospf 1 area ${POP}.0.0.0
  --END--
- --ONLY v6|R2-6rd--
+ --ONLY v6|R2-6rd|R2-pre-6rd--
  ipv6 address 2001:db8::${POP}:${ROUTER}/128
  ipv6 ospf 1 area ${POP}.0.0.0
  --END--
@@ -143,8 +143,8 @@ interface e1/0
  description "Link to core switch SW1"
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
  ip ospf 1 area 0.0.0.0								! ONLY v4
- ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6|6rd
- ipv6 ospf 1 area 0.0.0.0							! ONLY v6|6rd
+ ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6|6rd|pre-6rd
+ ipv6 ospf 1 area 0.0.0.0							! ONLY v6|6rd|pre-6rd
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
@@ -158,7 +158,7 @@ interface e1/0
  no ip directed-broadcast
  no ip proxy-arp
  --END--
- --ONLY v6|R2-6rd--
+ --ONLY v6|R2-6rd|R2-pre-6rd--
  no ipv6 redirects
  ipv6 nd ra suppress all
  --END--
@@ -174,7 +174,7 @@ interface e1/1
  no ip directed-broadcast
  no ip proxy-arp
  --END--
- --ONLY R2-v6|R2-6rd--
+ --ONLY R2-v6|R2-6rd|R2-pre-6rd--
  ipv6 address 2001:db8:0:2::${POP}/64
  ipv6 ospf 1 area 0.0.0.0
  no ipv6 redirects
@@ -192,7 +192,7 @@ interface e1/2
  shutdown
  --ONLY R2--
  ip address 192.168.1.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6|6rd
+ ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6|6rd|pre-6rd
  no shutdown
  --END--
 !
@@ -206,7 +206,7 @@ interface e1/3
  shutdown
  --ONLY R2--
  ip address 192.168.2.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6|6rd
+ ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6|6rd|pre-6rd
  no shutdown
  --END--
 !
@@ -230,7 +230,7 @@ router ospf 1
  no passive-interface e1/1
 --END--
 !
---ONLY v6|R2-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd--
 ipv6 router ospf 1
  timers throttle spf 200 2000 90000
  timers throttle lsa 200 10000 45000
@@ -242,7 +242,7 @@ ipv6 router ospf 1
  no passive-interface f0/0
  no passive-interface f0/1
 --END--
---ONLY R2-v6|R2-6rd--
+--ONLY R2-v6|R2-6rd|R2-pre-6rd--
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -313,7 +313,7 @@ router bgp 65530
   neighbor 172.16.2${POP}.6 activate
  --END--
  !
- --ONLY v6|R2-6rd--
+ --ONLY v6|R2-6rd|R2-pre-6rd--
  address-family ipv6
   no synchronization
   redistribute static
@@ -333,7 +333,7 @@ router bgp 65530
   neighbor 2001:db8::${POP}:3 activate
   neighbor POP${POP}-iBGP-IPv6 route-reflector-client
  --END--
- --ONLY R2-v6|R2-6rd--
+ --ONLY R2-v6|R2-6rd|R2-pre-6rd--
   network 2001:db8::/32
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 next-hop-self
@@ -377,7 +377,7 @@ router bgp 65530
 --ONLY R2-v4--
 ip prefix-list TRANSIT-OUT-IPv4 permit 172.16.0.0/12
 --END--
---ONLY R2-v6|R2-6rd--
+--ONLY R2-v6|R2-6rd|R2-pre-6rd--
 ipv6 prefix-list TRANSIT-OUT-IPv6 permit 2001:db8::/32
 --END--
 --ONLY R3-v4--
@@ -393,7 +393,7 @@ ipv6 prefix-list POP${POP}-CUST2-OUT-IPv6 permit ::/0 le 48
 ip access-list extended MANAGEMENT-IPv4
  permit ip 172.16.0.0 0.0.255.255 any
 --END--
---ONLY v6|R2-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd--
 ipv6 access-list MANAGEMENT-IPv6
  permit ipv6 2001:db8::/48 any
 --END--
@@ -401,7 +401,7 @@ ipv6 access-list MANAGEMENT-IPv6
 ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
 ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::b	! ONLY R1-v6
 ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
-ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd
+ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd|R2-pre-6rd
 ipv6 route 2001:db8:d${POP}ff::/48 Null 0					! ONLY R2-6rd
 ipv6 route 2001:db8:d${POP}00::/40 Tunnel6					! ONLY R2-6rd
 !
@@ -414,5 +414,5 @@ line vty 0 4
  login authentication default
  transport input ssh
  access-class MANAGEMENT-IPv4 in							! ONLY v4
- ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd
+ ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd|R2-pre-6rd
 !
