--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -252,7 +252,7 @@ router bgp 65530
  bgp log-neighbor-changes
  bgp graceful-restart
  timers bgp 5000 30000 30000
- no bgp default ipv4-unicast				! ONLY v6
+ no bgp default ipv4-unicast				! ONLY v6|6rd|pre-6rd
  --ONLY v4--
  address-family ipv4
   no auto-summary
