--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -143,7 +143,8 @@ ipv6 route 2001:db8:${POP}00${CUSTOMER}::/48 Null 0
 ipv6 route ::/0 2001:db8:${POP}:ff01::a			! ONLY CUST1
 --END--
 --ONLY 6rd--
-ipv6 route ::/0 Tunnel6
+ipv6 route 2001:db8:d${POP}00::/40 Tunnel6
+ipv6 route ::/0 2001:db8:d${POP}ff::
 --END--
 !
 --ONLY v4--
