Some fixes to the lab scripts

--- a/lab/cfg-generator/templates/core-switch.cfg
+++ b/lab/cfg-generator/templates/core-switch.cfg
@@ -6,6 +6,7 @@ service password-encryption
 hostname SW${SWITCH}
 no ip domain lookup
 no ip source-route
+ip arp proxy disable
 no cdp run
 !
 line console 0
