--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -14,6 +14,7 @@ no ip http server
 no ip http secure-server
 no ip finger
 no ip bootp server
+ip arp proxy disable
 no cdp run
 !
 --ONLY v4--
@@ -68,7 +69,6 @@ interface f0/0
  ip address 172.16.2${POP}.6 255.255.255.252		! ONLY CUST2
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  --END--
  --ONLY v6--
  ipv6 address 2001:db8:${POP}:ff0${CUSTOMER}::b/127
@@ -84,7 +84,6 @@ interface f0/1
  ip address 172.2${POP}.${CUSTOMER}.129 255.255.255.128
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  --END--
  --ONLY v6--
  ipv6 address 2001:db8:${POP}00${CUSTOMER}:abcd::1/64
@@ -103,7 +102,6 @@ router bgp 650${POP}2
  bgp router-id 172.2${POP}.2.1
  bgp log-neighbor-changes
  bgp graceful-restart
- timers bgp 5000 30000 30000
  no bgp default ipv4-unicast				! ONLY v6
 --END--
 --ONLY CUST2-v4--
@@ -160,10 +158,11 @@ line console 0
  login authentication default
  logging synchronous
  transport preferred none
+ privilege level 15
 !
 line vty 0 4
  login authentication default
- transport input ssh
+ transport input ssh telnet
  access-class MANAGEMENT-IPv4 in			! ONLY v4
  ipv6 access-class MANAGEMENT-IPv6 in			! ONLY v6|R2-6rd
 !
