--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -14,6 +14,7 @@ no ip http server
 no ip http secure-server
 no ip finger
 no ip bootp server
+ip arp proxy disable
 no cdp run
 !
 --ONLY v4--
@@ -86,7 +87,6 @@ interface f0/0
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
  ip ospf network point-to-point
  --END--
@@ -118,7 +118,6 @@ interface f0/1
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ip ospf 1 area ${POP}.0.0.0
  ip ospf network point-to-point
  --END--
@@ -156,7 +155,6 @@ interface e1/0
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  --END--
  --ONLY v6|R2-6rd|R2-pre-6rd--
  no ipv6 redirects
@@ -172,7 +170,6 @@ interface e1/1
  ip ospf 1 area 0.0.0.0
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  --END--
  --ONLY R2-v6|R2-6rd|R2-pre-6rd--
  ipv6 address 2001:db8:0:2::${POP}/64
@@ -186,7 +183,6 @@ interface e1/2
  duplex full
  no ip redirects									! ONLY v4
  no ip directed-broadcast							! ONLY v4
- no ip proxy-arp									! ONLY v4
  no ipv6 redirects									! ONLY v6
  ipv6 nd ra suppress all							! ONLY v6
  shutdown
@@ -200,7 +196,6 @@ interface e1/3
  duplex full
  no ip redirects									! ONLY v4
  no ip directed-broadcast							! ONLY v4
- no ip proxy-arp									! ONLY v4
  no ipv6 redirects									! ONLY v6
  ipv6 nd ra suppress all							! ONLY v6
  shutdown
@@ -212,10 +207,6 @@ interface e1/3
 !
 --ONLY v4--
 router ospf 1
- ispf
- timers throttle spf 200 2000 90000
- timers throttle lsa 200 10000 45000
- timers lsa arrival 2000
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 authentication message-digest
@@ -232,9 +223,6 @@ router ospf 1
 !
 --ONLY v6|R2-6rd|R2-pre-6rd--
 ipv6 router ospf 1
- timers throttle spf 200 2000 90000
- timers throttle lsa 200 10000 45000
- timers lsa arrival 2000
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
  area ${POP}.0.0.0 stub
@@ -251,7 +239,6 @@ router bgp 65530
  bgp router-id 172.16.${POP}.${ROUTER}
  bgp log-neighbor-changes
  bgp graceful-restart
- timers bgp 5000 30000 30000
  no bgp default ipv4-unicast				! ONLY v6|6rd|pre-6rd
  --ONLY v4--
  address-family ipv4
@@ -409,10 +396,11 @@ line console 0
  login authentication default
  logging synchronous
  transport preferred none
+ privilege level 15
 !
 line vty 0 4
  login authentication default
- transport input ssh
+ transport input ssh telnet
  access-class MANAGEMENT-IPv4 in							! ONLY v4
  ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd|R2-pre-6rd
 !
