--- a/lab/cfg-generator/templates/transit-router.cfg
+++ b/lab/cfg-generator/templates/transit-router.cfg
@@ -7,6 +7,7 @@ no ip http server
 no ip http secure-server
 no ip finger
 no ip bootp server
+ip arp proxy disable
 no cdp run
 !
 ip cef
@@ -44,7 +45,6 @@ interface f0/0
  --END--
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  no ipv6 redirects
  ipv6 nd ra suppress all
  no shutdown
@@ -55,7 +55,6 @@ interface f0/1
  ip address 192.168.${TRANSIT}.1 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}001::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -67,7 +66,6 @@ interface e1/0
  ip address 192.168.${TRANSIT}.5 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}002::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -79,7 +77,6 @@ interface e1/1
  ip address 192.168.${TRANSIT}.9 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}003::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -91,7 +88,6 @@ interface e1/2
  ip address 192.168.${TRANSIT}.13 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}004::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -103,7 +99,6 @@ interface e1/3
  ip address 192.168.${TRANSIT}.17 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}005::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -115,7 +110,6 @@ interface e2/0
  ip address 192.168.${TRANSIT}.21 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}006::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -127,7 +121,6 @@ interface e2/1
  ip address 192.168.${TRANSIT}.25 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}007::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -139,7 +132,6 @@ interface e2/2
  ip address 192.168.${TRANSIT}.29 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}008::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -151,7 +143,6 @@ interface e2/3
  ip address 192.168.${TRANSIT}.33 255.255.255.252
  no ip redirects
  no ip directed-broadcast
- no ip proxy-arp
  ipv6 address 2001:db9:ffff:${TRANSIT}009::a/127
  no ipv6 redirects
  ipv6 nd ra suppress all
@@ -161,7 +152,6 @@ router bgp 6553${TRANSIT}
  bgp router-id 192.168.0.${TRANSIT}
  bgp log-neighbor-changes
  bgp graceful-restart
- timers bgp 5000 30000 30000
  no bgp default ipv4-unicast
  address-family ipv4
   no auto-summary
