--- a/lab/cfg-generator/templates/transit-router.cfg
+++ b/lab/cfg-generator/templates/transit-router.cfg
@@ -217,9 +217,11 @@ ipv6 prefix-list CUST-65530-OUT-IPv6 permit ::/0 le 48
 !
 ip route 10.234.123.0 255.255.255.0 null 0
 ip route 10.111.222.0 255.255.255.0 null 0		! ONLY TRANSIT1
+ip route 10.72.0.0 255.255.0.0 Null0			! ONLY TRANSIT2
 ip route 10.121.128.0 255.255.128.0 null 0
 ip route 10.222.0.0 255.255.0.0 null 0
 ipv6 route fd64:8e44:70f2::/48 null 0
+ipv6 route fdd4:67a1:d2dd::/48 null 0			! ONLY TRANSIT1
 ipv6 route fdc2:c3f2:6be0::/48 null 0			! ONLY TRANSIT2
 ipv6 route fd4c:c670::/32 null 0
 !
