add dhcp-pd lab

--- a/lab/cfg-generator/templates/pop-customer.cfg
+++ b/lab/cfg-generator/templates/pop-customer.cfg
@@ -25,7 +25,7 @@ ip classless
 no ip source-route
 --END--
 !
---ONLY v6|6rd--
+--ONLY v6|6rd|dhcp|pre-dhcp--
 ipv6 unicast-routing
 ipv6 cef
 no ipv6 source-route
@@ -45,6 +45,7 @@ interface loopback 0
  description "POP ${POP} Customer ${CUSTOMER} Loopback"
  ip address 172.2${POP}.${CUSTOMER}.1 255.255.255.255	! ONLY v4
  ipv6 address 2001:db8:${POP}00${CUSTOMER}::1/128	! ONLY v6
+ ipv6 address MY_PREFIX ::1/128				! ONLY dhcp
  ipv6 address DELEGATED_PREFIX ::1/128			! ONLY 6rd
  no shutdown
 !
@@ -75,6 +76,12 @@ interface f0/0
  no ipv6 redirects
  ipv6 nd ra suppress all
  --END--
+ --ONLY dhcp--
+ ipv6 address autoconfig default
+ ipv6 dhcp client pd MY_PREFIX
+ no ipv6 redirects
+ ipv6 nd ra suppress all
+ --END--
  no shutdown
 !
 interface f0/1
@@ -95,9 +102,13 @@ interface f0/1
  ipv6 address DELEGATED_PREFIX 0:0:0:1::/64 anycast
  no ipv6 redirects
  --END--
+ --ONLY dhcp--
+ ipv6 address MY_PREFIX 0:0:0:1::1/64
+ no ipv6 redirects
+ --END--
  no shutdown
 !
---ONLY CUST2--
+--ONLY CUST2-v4|CUST2-v6|CUST2-6rd|CUST2-pre-6rd--
 router bgp 650${POP}2
  bgp router-id 172.2${POP}.2.1
  bgp log-neighbor-changes
@@ -149,7 +160,7 @@ ipv6 route ::/0 2001:db8:d${POP}ff::
 ip access-list extended MANAGEMENT-IPv4
  permit ip 172.16.0.0 0.0.255.255 any
 --END--
---ONLY v6|R2-6rd--
+--ONLY v6|6rd|dhcp--
 ipv6 access-list MANAGEMENT-IPv6
  permit ipv6 2001:db8::/48 any
 --END--
@@ -164,5 +175,5 @@ line vty 0 4
  login authentication default
  transport input ssh telnet
  access-class MANAGEMENT-IPv4 in			! ONLY v4
- ipv6 access-class MANAGEMENT-IPv6 in			! ONLY v6|R2-6rd
+ ipv6 access-class MANAGEMENT-IPv6 in			! ONLY v6|6rd|dhcp
 !
