--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -25,10 +25,19 @@ ip classless
 no ip source-route
 --END--
 !
---ONLY v6|R2-6rd|R2-pre-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp--
 ipv6 unicast-routing
 ipv6 cef
 no ipv6 source-route
+--END--
+!
+--ONLY R2-dhcp--
+ipv6 dhcp pool CLIENTS
+ prefix-delegation pool CLIENTS_POOL
+ dns-server 2001:4860:4860::8888
+ dns-server 2001:4860:4860::8844
+!
+ipv6 local pool CLIENTS_POOL 2001:DB8:${POP}100::/40 56
 --END--
 !
 no service pad
@@ -47,7 +56,7 @@ interface loopback 0
  ip address 172.16.${POP}.${ROUTER} 255.255.255.255
  ip ospf 1 area ${POP}.0.0.0
  --END--
- --ONLY v6|R2-6rd|R2-pre-6rd--
+ --ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp--
  ipv6 address 2001:db8::${POP}:${ROUTER}/128
  ipv6 ospf 1 area ${POP}.0.0.0
  --END--
@@ -72,17 +81,17 @@ interface f0/0
  --ONLY R1--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.10 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::b/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::b/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.2 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::b/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::b/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.6 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::b/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::b/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY v4--
  no ip redirects
@@ -90,12 +99,13 @@ interface f0/0
  ip ospf 1 area ${POP}.0.0.0
  ip ospf network point-to-point
  --END--
- --ONLY v6--
+ --ONLY v6|dhcp|pre-dhcp--
  no ipv6 redirects
  ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
  ipv6 ospf network point-to-point
  --END--
+ ipv6 dhcp server CLIENTS							! ONLY R2-dhcp
  no shutdown
 !
 interface f0/1
@@ -103,17 +113,17 @@ interface f0/1
  --ONLY R1--
  description "Link to POP${POP}-R2"
  ip address 172.16.1${POP}.1 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}01::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}01::a/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R2--
  description "Link to POP${POP}-R3"
  ip address 172.16.1${POP}.5 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}02::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}02::a/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R3--
  description "Link to POP${POP}-R1"
  ip address 172.16.1${POP}.9 255.255.255.252		! ONLY v4
- ipv6 address 2001:db8:0:${POP}03::a/127			! ONLY v6
+ ipv6 address 2001:db8:0:${POP}03::a/127			! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY v4--
  no ip redirects
@@ -121,12 +131,13 @@ interface f0/1
  ip ospf 1 area ${POP}.0.0.0
  ip ospf network point-to-point
  --END--
- --ONLY v6--
+ --ONLY v6|dhcp|pre-dhcp--
  no ipv6 redirects
  ipv6 nd ra suppress all
  ipv6 ospf 1 area ${POP}.0.0.0
  ipv6 ospf network point-to-point
  --END--
+ ipv6 dhcp server CLIENTS							! ONLY R2-dhcp
  no shutdown
 !
 interface e1/0
@@ -135,26 +146,31 @@ interface e1/0
  description "Link to POP${POP}-CUST1"
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
- ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6
- ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6|dhcp|pre-dhcp
+ ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R2--
  description "Link to core switch SW1"
  ip address 172.16.0.$((POP+224)) 255.255.255.240	! ONLY v4
  ip ospf 1 area 0.0.0.0								! ONLY v4
- ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6|6rd|pre-6rd
- ipv6 ospf 1 area 0.0.0.0							! ONLY v6|6rd|pre-6rd
+ ipv6 address 2001:db8:0:1::${POP}/64				! ONLY v6|6rd|pre-6rd|dhcp|pre-dhcp
+ ipv6 ospf 1 area 0.0.0.0							! ONLY v6|6rd|pre-6rd|dhcp|pre-dhcp
  --END--
  --ONLY R3--
  description "Link to POP${POP}-CUST2"
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
- ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6
- ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6|dhcp|pre-dhcp
+ ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY v4--
  no ip redirects
  no ip directed-broadcast
+ --END--
+ --ONLY R1-dhcp|R3-dhcp--
+ no ipv6 redirects
+ ipv6 nd other-config-flag
+ ipv6 dhcp relay destination 2001:db8::${POP}:2
  --END--
  --ONLY v6|R2-6rd|R2-pre-6rd--
  no ipv6 redirects
@@ -171,7 +187,7 @@ interface e1/1
  no ip redirects
  no ip directed-broadcast
  --END--
- --ONLY R2-v6|R2-6rd|R2-pre-6rd--
+ --ONLY R2-v6|R2-6rd|R2-pre-6rd|R2-dhcp|R2-pre-dhcp--
  ipv6 address 2001:db8:0:2::${POP}/64
  ipv6 ospf 1 area 0.0.0.0
  no ipv6 redirects
@@ -183,12 +199,12 @@ interface e1/2
  duplex full
  no ip redirects									! ONLY v4
  no ip directed-broadcast							! ONLY v4
- no ipv6 redirects									! ONLY v6
- ipv6 nd ra suppress all							! ONLY v6
+ no ipv6 redirects									! ONLY v6|dhcp|pre-dhcp
+ ipv6 nd ra suppress all							! ONLY v6|dhcp|pre-dhcp
  shutdown
  --ONLY R2--
  ip address 192.168.1.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6|6rd|pre-6rd
+ ipv6 address 2001:db9:ffff:100${POP}::b/127		! ONLY v6|6rd|pre-6rd|dhcp|pre-dhcp
  no shutdown
  --END--
 !
@@ -196,12 +212,12 @@ interface e1/3
  duplex full
  no ip redirects									! ONLY v4
  no ip directed-broadcast							! ONLY v4
- no ipv6 redirects									! ONLY v6
- ipv6 nd ra suppress all							! ONLY v6
+ no ipv6 redirects									! ONLY v6|dhcp|pre-dhcp
+ ipv6 nd ra suppress all							! ONLY v6|dhcp|pre-dhcp
  shutdown
  --ONLY R2--
  ip address 192.168.2.$((POP*4-2)) 255.255.255.252	! ONLY v4
- ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6|6rd|pre-6rd
+ ipv6 address 2001:db9:ffff:200${POP}::b/127		! ONLY v6|6rd|pre-6rd|dhcp|pre-dhcp
  no shutdown
  --END--
 !
@@ -219,7 +235,7 @@ router ospf 1
  no passive-interface e1/1
 --END--
 !
---ONLY v6|R2-6rd|R2-pre-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp--
 ipv6 router ospf 1
  log-adjacency-changes
  router-id 172.16.${POP}.${ROUTER}
@@ -228,7 +244,7 @@ ipv6 router ospf 1
  no passive-interface f0/0
  no passive-interface f0/1
 --END--
---ONLY R2-v6|R2-6rd|R2-pre-6rd--
+--ONLY R2-v6|R2-6rd|R2-pre-6rd|R2-dhcp|R2-pre-dhcp--
  no passive-interface e1/0
  no passive-interface e1/1
 --END--
@@ -237,7 +253,7 @@ router bgp 65530
  bgp router-id 172.16.${POP}.${ROUTER}
  bgp log-neighbor-changes
  bgp graceful-restart
- no bgp default ipv4-unicast				! ONLY v6|6rd|pre-6rd
+ no bgp default ipv4-unicast				! ONLY v6|6rd|pre-6rd|dhcp|pre-dhcp
  --ONLY v4--
  address-family ipv4
   no auto-summary
@@ -298,27 +314,27 @@ router bgp 65530
   neighbor 172.16.2${POP}.6 activate
  --END--
  !
- --ONLY v6|R2-6rd|R2-pre-6rd--
+ --ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp--
  address-family ipv6
   no synchronization
   redistribute static
-  neighbor POP${POP}-iBGP-IPv6 peer-group					! ONLY v6
-  neighbor POP${POP}-iBGP-IPv6 next-hop-self				! ONLY v6
-  neighbor POP${POP}-iBGP-IPv6 remote-as 65530				! ONLY v6
-  neighbor POP${POP}-iBGP-IPv6 update-source Loopback0		! ONLY v6
+  neighbor POP${POP}-iBGP-IPv6 peer-group					! ONLY v6|dhcp|pre-dhcp
+  neighbor POP${POP}-iBGP-IPv6 next-hop-self				! ONLY v6|dhcp|pre-dhcp
+  neighbor POP${POP}-iBGP-IPv6 remote-as 65530				! ONLY v6|dhcp|pre-dhcp
+  neighbor POP${POP}-iBGP-IPv6 update-source Loopback0		! ONLY v6|dhcp|pre-dhcp
  --END--
- --ONLY R1-v6--
+ --ONLY R1-v6|R1-dhcp|R1-pre-dhcp--
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:2 activate
  --END--
- --ONLY R2-v6--
+ --ONLY R2-v6|R2-dhcp|R2-pre-dhcp--
   neighbor 2001:db8::${POP}:1 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:1 activate
   neighbor 2001:db8::${POP}:3 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:3 activate
   neighbor POP${POP}-iBGP-IPv6 route-reflector-client
  --END--
- --ONLY R2-v6|R2-6rd|R2-pre-6rd--
+ --ONLY R2-v6|R2-6rd|R2-pre-6rd|R2-dhcp|R2-pre-dhcp--
   network 2001:db8::/32
   neighbor Core-iBGP-IPv6 peer-group
   neighbor Core-iBGP-IPv6 next-hop-self
@@ -362,7 +378,7 @@ router bgp 65530
 --ONLY R2-v4--
 ip prefix-list TRANSIT-OUT-IPv4 permit 172.16.0.0/12
 --END--
---ONLY R2-v6|R2-6rd|R2-pre-6rd--
+--ONLY R2-v6|R2-6rd|R2-pre-6rd|R2-dhcp|R2-pre-dhcp--
 ipv6 prefix-list TRANSIT-OUT-IPv6 permit 2001:db8::/32
 --END--
 --ONLY R3-v4--
@@ -378,7 +394,7 @@ ipv6 prefix-list POP${POP}-CUST2-OUT-IPv6 permit ::/0 le 48
 ip access-list extended MANAGEMENT-IPv4
  permit ip 172.16.0.0 0.0.255.255 any
 --END--
---ONLY v6|R2-6rd|R2-pre-6rd--
+--ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp--
 ipv6 access-list MANAGEMENT-IPv6
  permit ipv6 2001:db8::/48 any
 --END--
@@ -386,7 +402,7 @@ ipv6 access-list MANAGEMENT-IPv6
 ip route 172.2${POP}.1.0 255.255.255.0 172.16.2${POP}.2		! ONLY R1-v4
 ipv6 route 2001:db8:${POP}001::/48 2001:db8:${POP}:ff01::b	! ONLY R1-v6
 ip route 172.16.0.0 255.240.0.0 Null 0						! ONLY R2-v4
-ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd|R2-pre-6rd
+ipv6 route 2001:db8::/32 Null 0								! ONLY R2-v6|R2-6rd|R2-pre-6rd|R2-dhcp|R2-pre-dhcp
 ipv6 route 2001:db8:d${POP}ff::/48 Null 0					! ONLY R2-6rd
 ipv6 route 2001:db8:d${POP}00::/40 Tunnel6					! ONLY R2-6rd
 !
@@ -400,5 +416,5 @@ line vty 0 4
  login authentication default
  transport input ssh telnet
  access-class MANAGEMENT-IPv4 in							! ONLY v4
- ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd|R2-pre-6rd
+ ipv6 access-class MANAGEMENT-IPv6 in						! ONLY v6|R2-6rd|R2-pre-6rd|dhcp|pre-dhcp
 !
