fix bgp bug on R3

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -365,9 +365,11 @@ router bgp 65530
   neighbor 2001:db8::9:2 peer-group Core-iBGP-IPv6	! ONLY POP9EXISTS
   neighbor 2001:db8::9:2 activate					! ONLY POP9EXISTS
  --END--
- --ONLY R3-v6--
+ --ONLY R3-v6|R3-dhcp|R3-pre-dhcp--
   neighbor 2001:db8::${POP}:2 peer-group POP${POP}-iBGP-IPv6
   neighbor 2001:db8::${POP}:2 activate
+ --END--
+ --ONLY R3-v6--
   neighbor 2001:db8:${POP}:ff02::b remote-as 650${POP}2
   neighbor 2001:db8:${POP}:ff02::b description "BGP customer POP${POP}-CUST2"
   neighbor 2001:db8:${POP}:ff02::b prefix-list POP${POP}-CUST2-IN-IPv6 in
