fix subnet mask on autoconf interfaces

--- a/lab/cfg-generator/templates/pop-router.cfg
+++ b/lab/cfg-generator/templates/pop-router.cfg
@@ -146,7 +146,8 @@ interface e1/0
  description "Link to POP${POP}-CUST1"
  ip address 172.16.2${POP}.1 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
- ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6|dhcp|pre-dhcp
+ ipv6 address 2001:db8:${POP}:ff01::a/127			! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff01::1/64			! ONLY dhcp|pre-dhcp
  ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY R2--
@@ -160,7 +161,8 @@ interface e1/0
  description "Link to POP${POP}-CUST2"
  ip address 172.16.2${POP}.5 255.255.255.252		! ONLY v4
  ip ospf 1 area ${POP}.0.0.0						! ONLY v4
- ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6|dhcp|pre-dhcp
+ ipv6 address 2001:db8:${POP}:ff02::a/127			! ONLY v6
+ ipv6 address 2001:db8:${POP}:ff02::1/64			! ONLY dhcp|pre-dhcp
  ipv6 ospf 1 area ${POP}.0.0.0						! ONLY v6|dhcp|pre-dhcp
  --END--
  --ONLY v4--
