fix path to dynagen

--- a/lab/cfg-generator/templates/transit-router.cfg
+++ b/lab/cfg-generator/templates/transit-router.cfg
@@ -40,8 +40,10 @@ interface f0/0
  duplex full
  description "Link to outside world"
  --ONLY TRANSIT1--
+ ip address 192.168.88.8 255.255.255.0
  --END--
  --ONLY TRANSIT2--
+ ip address 192.168.88.9 255.255.255.0
  --END--
  no ip redirects
  no ip directed-broadcast
